    - Give the controller END_STREAM_REASON_DESTROY events _before_ we
      clear the corresponding on_circuit variable, and remember later that
      we don't need to send a redundant CLOSED event.  (Resolves part 3 of
      bug 367.)
    - Report events where a resolve succeeded or where we got a socks
      protocol error correctly, rather than calling both of them
      "INTERNAL".

  o Minor bugfixes (other):
    - Display correct results when reporting which versions are
      recommended, and how recommended they are. (Resolves bug 383.)
    - Improve our estimates for directory bandwidth to be less random:
      guess that an unrecognized directory will have the average bandwidth
      from all known directories, not that it will have the average
      bandwidth from those directories earlier than it on the list.
    - If we start a server with ClientOnly 1, then set ClientOnly to 0
      and hup, stop triggering an assert based on an empty onion_key.
    - On platforms with no working mmap() equivalent, don't warn the
      user when cached-routers doesn't exist.
    - Warn the user when mmap() [or its equivalent] fails for some reason
      other than file-not-found.
    - Don't warn the user when cached-routers.new doesn't exist: that's
      perfectly fine when starting up for the first time.
    - When EntryNodes are configured, rebuild the guard list to contain, in
      order: the EntryNodes that were guards before; the rest of the
      EntryNodes; the nodes that were guards before.
    - Mask out all signals in sub-threads; only the libevent signal handler
      should be processing them. This should prevent some crashes on some
      machines using pthreads. (Patch from coderman.)
    - Fix switched arguments on memset in the implementation of tor_munmap()
      for systems with no mmap() call.
    - When Tor receives a router descriptor that it asked for, but no longer
      wants (because it has received fresh networkstatuses in the meantime),